Nuevo estilo html

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,13 @@
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
-        <h1>Historia de los blogs</h1>
-        <p>En este parrafo hablaremos de los blogs </p>
+        <div id="container">
+            <div id="post">
+                <h1>Un titulo muy atractivo</h1>
+                <p>Y este es el parrafo de inicio donde vamos
+                a explicar las cosas increibles que se 
+                pueden hacer con rama</p>
+            </div>
+        </div>
     </body>
 </html>
