--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <h1>Un titulo muy atractivo</h1>
                 <p>Y este es el parrafo de inicio donde vamos
