Agregado contenido adicional

--- a/blog.html
+++ b/blog.html
@@ -7,9 +7,16 @@
         <div id="container">
             <div id="post">
                 <h1>Un titulo muy atractivo</h1>
-                <p>Y este es el parrafo de inicio donde vamos
+                <p>
+                    Y este es el parrafo de inicio donde vamos
                 a explicar las cosas increibles que se 
-                pueden hacer con rama</p>
+                pueden hacer con rama
+                </p>
+                <p>
+                    Los blogs son la mejor forma de compartir 
+                    información y tus ideas, mucho mejor que
+                    ir a conferencias o salir en YouTube
+                </p>
             </div>
         </div>
     </body>
