Cambio en el título

--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Nuevo blog</title>
+        <title>HyperBlog</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
