--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
                     confianza</span>
             </div>
             <div id="post">
-                <h1>Un titulo muy atractivo</h1>
+                <h1>Un título muy atractivo</h1>
                 <p>
                     Y este es el parrafo de inicio donde vamos
                 a explicar las cosas increibles que se 
@@ -21,6 +21,9 @@
                     información y tus ideas, mucho mejor que
                     ir a conferencias o salir en YouTube
                 </p>
+            </div>
+            <div id="footer">
+                Footer creado por otro usuario
             </div>
         </div>
     </body>
