--- a/blog.html
+++ b/blog.html
@@ -13,14 +13,14 @@
             <div id="post">
                 <h1>Un título muy atractivo</h1>
                 <p>
-                    Y este es el parrafo de inicio donde vamos
-                a explicar las cosas increibles que se 
-                pueden hacer con rama
+                    Y este es el párrafo de inicio donde vamos
+                a explicar las cosas increíbles que se 
+                pueden hacer con las ramas
                 </p>
                 <p>
                     Los blogs son la mejor forma de compartir 
                     información y tus ideas, mucho mejor que
-                    ir a conferencias o salir en YouTube
+                    ir a conferencias o salir en YouTube.
                 </p>
             </div>
             <div id="footer">
