--- a/blog.html
+++ b/blog.html
@@ -11,15 +11,15 @@
                     confianza</span>
             </div>
             <div id="post">
-                <h1>Un título muy atractivo</h1>
+                <h1>Un t&iacute;tulo muy atractivo</h1>
                 <p>
-                    Y este es el párrafo de inicio donde vamos
-                a explicar las cosas increíbles que se 
-                pueden hacer con las ramas
+                    Y este es el p&aacute;rrafo de inicio donde vamos
+                a explicar las cosas incre&iacute;bles que se 
+                pueden hacer con las ramas.
                 </p>
                 <p>
                     Los blogs son la mejor forma de compartir 
-                    información y tus ideas, mucho mejor que
+                    informaci&oacute;n y tus ideas, mucho mejor que
                     ir a conferencias o salir en YouTube.
                 </p>
             </div>
