Nueva historia y head de utf

--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>HyperBlog v3.0</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
@@ -19,7 +20,7 @@
                 </p>
                 <p>
                     Los blogs son la mejor forma de compartir 
-                    informaci&oacute;n y tus ideas, mucho mejor que
+                    información y tus ideas, mucho mejor que
                     ir a conferencias o salir en YouTube.
                 </p>
             </div>
