--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>HyperBlog v3.0</title>
+        <title>HyperBlog v3.1</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 <img id="logo" src="imagenes/blog.png"/>
                 Hyperblog <span id="tagline">Tu blog de 
-                    confianza</span>
+                    confianza sobre git</span>
             </div>
             <div id="post">
                 <h1>Un t&iacute;tulo muy atractivo</h1>
