archivos a ignorar con .gitignore

--- a/blog.html
+++ b/blog.html
@@ -13,16 +13,13 @@
             </div>
             <div id="post">
                 <h1>Un t&iacute;tulo muy atractivo</h1>
-                <p>
-                    Y este es el p&aacute;rrafo de inicio donde vamos
+                <p>Y este es el p&aacute;rrafo de inicio donde vamos
                 a explicar las cosas incre&iacute;bles que se 
-                pueden hacer con las ramas.
-                </p>
-                <p>
-                    Los blogs son la mejor forma de compartir 
-                    información y tus ideas, mucho mejor que
-                    ir a conferencias o salir en YouTube.
-                </p>
+                pueden hacer con las ramas.</p>
+                <p><img id="imagen" src="imagenes/imagen.jpg"></p>
+                <p>Los blogs son la mejor forma de compartir 
+                información y tus ideas, mucho mejor que
+                ir a conferencias o salir en YouTube.</p>
             </div>
             <div id="footer">
                 Footer creado por otro usuario
