--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos
                 a explicar las cosas incre&iacute;bles que se 
                 pueden hacer con las ramas.</p>
-                <p><img id="imagen" src="imagenes/imagen.jpg"></p>
+                <p><img id="imagen" src="https://i.imgur.com/ZuIFeZr.jpg"></p>
                 <p>Los blogs son la mejor forma de compartir 
                 información y tus ideas, mucho mejor que
                 ir a conferencias o salir en YouTube.</p>
